--- a/media/css/global.css
+++ b/media/css/global.css
@@ -101,6 +101,12 @@ New Header Styles
 	padding: 0 0 0 25px;
 }
 
+#main_bar #bar_search input:focus {
+	border: 0 !important;
+	-webkit-box-shadow: 0 0 0;
+	-moz-box-shadow: 0 0 0;
+}
+
 #main_bar ul#bar_menu {
 	float: right;
 }
@@ -441,7 +447,7 @@ ul#subnav li#subnav_menu {
 
 .wrapper {
   width: 940px;
-  margin: 0 auto;
+  margin: 25px auto;
 }
 
 
