--- a/media/css/html.css
+++ b/media/css/html.css
@@ -1,5 +1,5 @@
 body {
-  background: #FFF;
+  background: #ecf3f5;
   margin: 0 auto;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -34,6 +34,10 @@ button::-moz-focus-inner {
 Type
 */
 
+strong {
+	font-weight: bold;
+}
+
 p {
   line-height: 1.5em;
 }
@@ -46,6 +50,7 @@ h2 {
   margin: 0 0 20px;
   padding: 0 0 20px 0;
   text-shadow: 1px 1px 1px #fff;
+	font-weight: bold;
 }
 
 h3 {
@@ -53,6 +58,11 @@ h3 {
   margin: 0;
   font-size: 16px;
   text-shadow: 1px 1px 1px #fff;
+	font-weight: bold;
+}
+
+h4 {
+	font-weight: bold;
 }
 
 h4.inline {
