--- a/media/css/index.css
+++ b/media/css/index.css
@@ -2,13 +2,10 @@
 section_primary
 */
 
-#content {
-}
-
 #intro {
   width: 460px;
   float: left;
-	margin: 25px 0 0 0;
+	margin: 0 0 0 0;
 }
 
 #intro h1 {
@@ -74,7 +71,7 @@ section_secondary
   height: 405px;
   margin: 25px auto;
   text-align: left;
-  background: url(../images/interface/bg_secondary_section.jpg) no-repeat;
+  background: url(../images/interface/bg_secondary_section.png) no-repeat;
 	color: #FFF;
 }
 
